--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,6 +25,9 @@ archives:
   -
     name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     format: "tar.gz"
+    format_overrides:
+      - goos: windows
+        format: zip
 
 # Checksum
 checksum:
