--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,10 @@ on:
     tags:
       - 'v*'
   pull_request:
-    branches:
-      - master
-      - develop
+    types:
+      - opened
+      - reopened
+      - edited
 
 jobs:
   build:
