change(goreleaser): update configuration to skip Merge branch commits in release notes

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,8 +40,8 @@ snapshot:
 
 # Changelog
 changelog:
-  sort: asc
   filters:
     exclude:
       - "^docs:"
       - "^test:"
+      - "^Merge branch"
