--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,14 @@ on:
       - develop
     tags:
       - 'v*'
-  pull_request:
-    types:
-      - opened
-      - reopened
-      - edited
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       # dependencies
-      - name: dependencies
+      - name: goreleaser
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sudo sh -s -- -b /usr/local/bin v1.24.0
           curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sudo sh -s -- -b /usr/local/bin
 
       # checkout
@@ -33,15 +27,12 @@ jobs:
       - name: go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.14
+          go-version: 1.16
 
-      - name: go_version
-        run: go version
-
-      # test
-#      - name: test
-#        run: |
-#          make test
+      - name: go info
+        run: |
+          go version
+          go env
 
       # cache
       - name: cache
@@ -57,6 +48,10 @@ jobs:
         run: |
           make vendor
 
+      # git status
+      - name: git status
+        run: git status
+
       # build
       - name: build
         if: startsWith(github.ref, 'refs/tags/') == false
@@ -65,7 +60,7 @@ jobs:
 
       # publish
       - name: publish
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') == true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -76,16 +71,16 @@ jobs:
         uses: actions/upload-artifact@v2-preview
         with:
           name: build_linux
-          path: dist/*linux*.tar.gz
+          path: dist/*linux*
 
       - name: artifact_darwin
         uses: actions/upload-artifact@v2-preview
         with:
           name: build_darwin
-          path: dist/*darwin*.tar.gz
+          path: dist/*darwin*
 
       - name: artifact_windows
         uses: actions/upload-artifact@v2-preview
         with:
           name: build_windows
-          path: dist/*windows*.zip
+          path: dist/*windows*
