fix: use state to determine whether torrent is downloaded

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,6 +21,11 @@ builds:
     flags:
       - -trimpath
 
+# MacOS Universal Binaries
+universal_binaries:
+  -
+    replace: true
+
 # Archive
 archives:
   -
